set overflow-x in body to hidden, fixed weird gap in pre selection view?

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -21,15 +21,17 @@
 
 body {
   background-image: url("/public/background.png");
-  background-size: 100%;
+  background-size: cover;
+  background-repeat: none;
   background-attachment: fixed;
-  background-color: rgb(var(--background));
+  /*background-color: rgb(var(--background));*/
   color: rgba(var(--text), 0.93);
   font-family: var(--font);
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.03em;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .wrapper {
@@ -139,8 +141,8 @@ img {
 
 .gif {
   width: 100%;
-  height: 0;
-  padding-bottom: 66%;
+  height: 360px;
+  /*padding-bottom: 66%;*/
   position: relative;
 }
 
